--- a/src/app/countries/pages/by-captial-page/by-captial-page.component.html
+++ b/src/app/countries/pages/by-captial-page/by-captial-page.component.html
@@ -3,12 +3,17 @@
 <div class="row">
     <div class="col">
         <!-- SearchBox -->
-        <shared-search-box (onValue)="searchByCapital($event)" placeholder="Buscar por capital"></shared-search-box>
+        <shared-search-box
+            (onDebounce)="searchByCapital($event)"
+            placeholder="Buscar por capital"
+            [initialValue]="initialValue"
+        ></shared-search-box>
     </div>
 </div>
 <div class="row">
     <div class="col">
         <hr>
+        <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
         <countries-table [countries]="countries"></countries-table>
     </div>
 </div>
