--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -3,12 +3,17 @@
 <div class="row">
     <div class="col">
         <!-- SearchBox -->
-        <shared-search-box (onValue)="searchByCountry($event)" placeholder="Buscar por país"></shared-search-box>
+        <shared-search-box
+          (onDebounce)="searchByCountry($event)"
+          placeholder="Buscar por país"
+          [initialValue]="initialValue"
+        ></shared-search-box>
     </div>
 </div>
 <div class="row">
     <div class="col">
         <hr>
+        <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
         <countries-table [countries]="countries"></countries-table>
     </div>
 </div>
