--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,1 +1,9 @@
-<input type="text" [placeholder]="placeholder" class="form-control" #txtInput (keyup.enter)="emitValue( txtInput.value )">
+<!-- (keyup.enter)="emitValue( txtInput.value )" -->
+<input
+  type="text"
+  class="form-control"
+  [placeholder]="placeholder"
+  #txtInput
+  (keyup)="onKeyPress( txtInput.value )"
+  [value]="initialValue"
+>
